📝 Revise CLAUDE.md: streamline structure, update specifications, and clarify environment setup